fdo#38511 improve guess of output filter for --convert-to

Change-Id: I0479fb29fcc85f47065b1ef497216982eeae4d12